--- a/src/Common/Navbar/Navbar.css
+++ b/src/Common/Navbar/Navbar.css
@@ -115,7 +115,7 @@ nav i {
 
 /* -------- Header -------- */
 header {
-  padding: 40px 0 20px 0;
+  padding: 2vh 0; /* Adjusted padding for better spacing */
   background-color: #fff;
 }
 
@@ -123,19 +123,22 @@ header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap; /* Added flex-wrap to wrap items on smaller screens */
 }
 
 header .logo {
   display: flex;
   align-items: center;
   width: 170px;
-  height: 60px;
+  height: auto; /* Changed height to auto to maintain aspect ratio */
+  margin-bottom: 1vh; /* Added margin-bottom for spacing */
 }
 
 header .contact {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 1.5vw; /* Adjusted gap for better spacing */
+  flex-wrap: wrap; /* Added flex-wrap to wrap items on smaller screens */
 }
 
 header .box {
@@ -144,24 +147,24 @@ header .box {
 }
 
 header .icons {
-  margin-right: 5px;
+  margin-right: 0.5vw; /* Adjusted margin-right for better spacing */
 }
 
 header a {
-  font-size: 13px;
+  font-size: 1.2vw; /* Adjusted font-size for responsiveness */
   color: grey;
 }
 
 header i {
-  font-size: 40px;
+  font-size: 2.5vw; /* Adjusted font-size for responsiveness */
   color: #31b675;
-  margin-right: 15px;
+  margin-right: 1vw; /* Adjusted margin-right for better spacing */
 }
 
 header .text {
-  margin-top: 10px;
+  margin-top: 1vh; /* Adjusted margin-top for better spacing */
 }
 
 header h4 {
-  line-height: 10px;
+  line-height: 2vh; /* Adjusted line-height for better spacing */
 }
