--- a/src/Common/footer/Footer.css
+++ b/src/Common/footer/Footer.css
@@ -7,7 +7,7 @@ footer {
 
 footer .container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
 }
 
@@ -60,4 +60,14 @@ footer ul li {
   color: white;
   font-size: 12px;
   opacity: 0.7;
+}
+
+@media screen and (max-width: 768px) {
+  footer .container {
+    grid-template-columns: 1fr;
+  }
+  
+  footer .box {
+    margin-left: 0;
+  }
 }
