--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -94,3 +94,24 @@
     width: 100%;
   }
 }
+
+.secondary-btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #fff;
+  color: #000;
+  border: 2px solid #000;
+  text-decoration: none;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.secondary-btn:hover {
+  background-color: #3CB371;
+  color: black;
+}
+
+.secondary-btn:active {
+  background-color: green;
+  color: #fff;
+}
+
