--- a/src/Components/gallery/Gallery.css
+++ b/src/Components/gallery/Gallery.css
@@ -1,57 +1,74 @@
 .gallery {
   margin-bottom: 50px;
 }
+
 .gallery img {
   transition: 0.5s;
   width: 100%;
   height: 100%;
 }
+
 .gallery .items {
   padding: 15px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   text-align: center;
 }
+
 .gallery h3 {
-  margin: 10px 0 10px 0;
+  margin: 10px 0;
   font-weight: 400;
 }
+
 .gallery .img {
   position: relative;
   overflow: hidden;
-  width: 380px;
-  height: 252px;
+  width: 100%;
+  height: 0;
+  padding-bottom: 66.66%; /* 3:2 aspect ratio */
+}
+
+.gallery .img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .gallery i {
   position: absolute;
-  top: 45%;
-  left: 45%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 5;
   font-size: 40px;
   color: white;
   opacity: 0;
   transition: 0.5s ease-in-out;
 }
-.gallery .img::before {
+
+.gallery .img::before,
+.gallery .img::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  width: 380px;
-  height: 252px;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
   transition: 0.5s ease-in-out;
 }
+
 .gallery .img::after {
   content: "";
-  position: absolute;
   top: 10px;
   left: 10px;
-  width: 360px;
-  height: 232px;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
   z-index: 3;
   border: 1px solid #31b675;
   opacity: 0;
@@ -62,12 +79,14 @@
   transform: scale(1.2);
   cursor: pointer;
 }
+
 .gallery .items:hover i,
 .gallery .items:hover .img::after,
 .gallery .items:hover .img::before {
   opacity: 1;
   cursor: pointer;
 }
+
 .popup {
   width: 100vw;
   height: 100vh;
@@ -88,11 +107,13 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
 }
+
 .popup-content {
   position: absolute;
   top: 15%;
   left: 20%;
 }
+
 .popup button {
   background-color: #fff;
   padding: 20px 20px;
@@ -102,25 +123,28 @@
   right: -34.5%;
   font-weight: bold;
 }
+
 @media screen and (max-width: 768px) {
   .gallery .container {
     max-width: 100%;
   }
+
   .gallery .img {
-    width: 100%;
-    height: 200px;
+    padding-bottom: 60%; /* Adjust the aspect ratio as needed */
   }
 
   .gallery .img::after {
-    width: 300px;
-    height: 180px;
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
   }
+
   .popup-content {
     padding: 50px;
     position: absolute;
     top: 30%;
     left: 0%;
   }
+
   .popup button {
     background-color: #fff;
     padding: 20px 20px;
