--- a/src/Components/Slide.css
+++ b/src/Components/Slide.css
@@ -2,9 +2,10 @@
   display: none;
   position: relative;
   width: 100%;
-  padding-top: 56.25%; /* Adjust the aspect ratio here (16:9 = 56.25%) */
+  padding-top: 40%; /* Adjust the aspect ratio here */
 }
 
+/* Rest of the CSS remains the same */
 .slide.active {
   display: block;
 }
@@ -15,5 +16,5 @@
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Maintain the aspect ratio and fill the container */
+  object-fit: cover;
 }
