--- a/src/Components/gallery/Gallery.css
+++ b/src/Components/gallery/Gallery.css
@@ -155,3 +155,9 @@
     font-weight: bold;
   }
 }
+.popup-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
